--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
         <div class="mini-container-2">
             <div class="block-container">
                 <div class="card-container">
-                    <img class="block-image" src="./assets/blocks/block1.svg" alt="">
-                    <img class="block-image" src="./assets/blocks/block2.svg" alt="">
+                    <img class="block-image hover:scale-110 transition duration-500" src="./assets/blocks/block1.svg" alt="">
+                    <img class="block-image hover:scale-110 transition duration-500" src="./assets/blocks/block2.svg" alt="">
                 </div>
                 <div class="card-container">
-                    <img class="block-image" src="./assets/blocks/block3.svg" alt="">
-                    <img class="block-image" src="./assets/blocks/block4.svg" alt="">
+                    <img class="block-image hover:scale-110 transition duration-500" src="./assets/blocks/block3.svg" alt="">
+                    <img class="block-image hover:scale-110 transition duration-500" src="./assets/blocks/block4.svg" alt="">
                 </div>
             </div>
             <div class="content-container-1">
@@ -197,7 +197,7 @@
                 <div class="numbertext">1 / 3</div>
                 <div class="ver-carousel-card">
                     <div class="ver-cnt">
-                        <div class="ver-crl-container">
+                        <div class="ver-crl-container hover:scale-105 transition duration-500">
                             <img src="./assets/versatile/verasatile1.svg" class="ver-crl-image">
                             <div class="p-8">
                                 <p class="ver-header-font">Usecase 1:</p>
@@ -213,7 +213,7 @@
                             </div>
 
                         </div>
-                        <div class="ver-crl-container">
+                        <div class="ver-crl-container hover:scale-105 transition duration-500">
                             <img src="./assets/versatile/vesatile2.svg" class="ver-crl-image">
                             <div class="p-8">
                                 <p class="ver-header-font">Usecase 1:</p>
@@ -238,7 +238,7 @@
                 <div class="numbertext">2 / 3</div>
                 <div class="ver-carousel-card">
                     <div class="ver-cnt">
-                        <div class="ver-crl-container">
+                        <div class="ver-crl-container hover:scale-105 transition duration-500">
                             <img src="./assets/versatile/verasatile1.svg" class="ver-crl-image">
                             <div class="p-8">
                                 <p class="ver-header-font">Usecase 1:</p>
@@ -254,7 +254,7 @@
                             </div>
 
                         </div>
-                        <div class="ver-crl-container">
+                        <div class="ver-crl-container hover:scale-105 transition duration-500">
                             <img src="./assets/versatile/vesatile2.svg" class="ver-crl-image">
                             <div class="p-8">
                                 <p class="ver-header-font">Usecase 1:</p>
@@ -279,7 +279,7 @@
                 <div class="numbertext">3 / 3</div>
                 <div class="ver-carousel-card">
                     <div class="ver-cnt">
-                        <div class="ver-crl-container">
+                        <div class="ver-crl-container hover:scale-105 transition duration-500">
                             <img src="./assets/versatile/verasatile1.svg" class="ver-crl-image">
                             <div class="p-8">
                                 <p class="ver-header-font">Usecase 1:</p>
@@ -295,7 +295,7 @@
                             </div>
 
                         </div>
-                        <div class="ver-crl-container">
+                        <div class="ver-crl-container hover:scale-105 transition duration-500">
                             <img src="./assets/versatile/vesatile2.svg" class="ver-crl-image">
                             <div class="p-8">
                                 <p class="ver-header-font">Usecase 1:</p>
@@ -342,21 +342,21 @@
             </p>
         </div>
         <div class="white-cards-container">
-            <div class="white-cards">
+            <div class="white-cards hover:scale-110 transition duration-500">
                 <img class="w-10 h-10" src="./assets/icons/file.svg" alt="">
                 <p class="white-card-content">Wholesome Brand Positioning</p>
             </div>
-            <div class="white-cards">
+            <div class="white-cards hover:scale-110 transition duration-500">
                 <img class="w-10 h-10" src="./assets/icons/file.svg" alt="">
                 <p class="white-card-content">Enhance Brand
                     Exposure</p>
             </div>
-            <div class="white-cards">
+            <div class="white-cards hover:scale-110 transition duration-500">
                 <img class="w-10 h-10" src="./assets/icons/file.svg" alt="">
                 <p class="white-card-content">Customer
                     Acquistition</p>
             </div>
-            <div class="white-cards">
+            <div class="white-cards hover:scale-110 transition duration-500">
                 <img class="w-10 h-10" src="./assets/icons/file.svg" alt="">
                 <p class="white-card-content">Business Expansion</p>
             </div>
@@ -366,12 +366,12 @@
     <div class="progress-bg">
         <div class="clients-container">
             <div class="clients-container-images">
-                <img class="w-auto h-12" src="./assets/clients/alpl.svg" alt="">
-                <img class="w-auto h-12" src="./assets/clients/cxs.svg" alt="">
-                <img class="w-auto h-12" src="./assets/clients/clematis.svg" alt="">
-                <img class="w-auto h-12" src="./assets/clients/vet.svg" alt="">
-                <img class="w-auto h-12" src="./assets/clients/taras.svg" alt="">
-                <img class="w-auto h-12" src="./assets/clients/agraga.svg" alt="">
+                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/alpl.svg" alt="">
+                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/cxs.svg" alt="">
+                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/clematis.svg" alt="">
+                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/vet.svg" alt="">
+                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/taras.svg" alt="">
+                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/agraga.svg" alt="">
             </div>
 
             <div class="container-progress">
@@ -414,7 +414,7 @@
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
                 <div class="carousel-card shadow-2xl">
-                    <img src="./assets/customer/carousel1.svg" class="carousel-width">
+                    <img src="./assets/customer/carousel1.svg" class="carousel-width hover:scale-105 transition duration-500">
                     <div class="carousel-content">
                         <p class="black-font">Case study title 1:</p>
                         <p class="normal-font">
@@ -433,7 +433,7 @@
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
                 <div class="carousel-card shadow-2xl">
-                    <img src="./assets/customer/carousel1.svg" class="carousel-width">
+                    <img src="./assets/customer/carousel1.svg" class="carousel-width hover:scale-105 transition duration-500"">
                     <div class="carousel-content">
                         <p class="black-font">Case study title 1:</p>
                         <p class="normal-font">
@@ -452,7 +452,7 @@
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
                 <div class="carousel-card shadow-2xl">
-                    <img src="./assets/customer/carousel1.svg" class="carousel-width">
+                    <img src="./assets/customer/carousel1.svg" class="carousel-width hover:scale-105 transition duration-500"">
                     <div class="carousel-content">
                         <p class="black-font">Case study title 1:</p>
                         <p class="normal-font">
@@ -494,7 +494,7 @@
                     <div>
                         <img class="w-28 firstQuo" src="./assets/icons/startQou.svg" alt="">
                     </div>
-                    <div class="profile-card ">
+                    <div class="profile-card hover:scale-110 transition duration-500">
                         <img class="w-14 mx-auto " src="./assets/icons/pf.svg" alt="">
                         <p class="black-font text-center add-up-space">Barry Allen</p>
                         <p class="red-font text-center add-up-space">CEO, FACEBOOK INC.</p>
@@ -516,7 +516,7 @@
                     <div>
                         <img class="w-28 firstQuo" src="./assets/icons/startQou.svg" alt="">
                     </div>
-                    <div class="profile-card ">
+                    <div class="profile-card hover:scale-110 transition duration-500">
                         <img class="w-14 mx-auto " src="./assets/icons/pf.svg" alt="">
                         <p class="black-font text-center add-up-space">Barry Allen</p>
                         <p class="red-font text-center add-up-space">CEO, FACEBOOK INC.</p>
@@ -538,7 +538,7 @@
                     <div>
                         <img class="w-28 firstQuo" src="./assets/icons/startQou.svg" alt="">
                     </div>
-                    <div class="profile-card ">
+                    <div class="profile-card hover:scale-110 transition duration-500">
                         <img class="w-14 mx-auto " src="./assets/icons/pf.svg" alt="">
                         <p class="black-font text-center add-up-space">Barry Allen</p>
                         <p class="red-font text-center add-up-space">CEO, FACEBOOK INC.</p>
@@ -562,7 +562,7 @@
     </div>
 
     <div class="about-container">
-        <img class="about-image" src="./assets/about.svg" alt="">
+        <img class="about-image hover:scale-105 transition duration-500" src="./assets/about.svg" alt="">
         <div class="about-sub-1">
             <p class="black-font"> About us</p>
             <p class="grey-font">Founded with a vision to revolutionize the technological landscape, Codeupglobal has
