--- a/aboutUs.html
+++ b/aboutUs.html
@@ -114,7 +114,7 @@
 
     <div class="w-full py-8">
         <p class="red-font text-center">TRUSTED BY</p>
-        <marquee direction="left" class="clients-container-images py-6" style="max-width: 100%;">
+        <marquee direction="left" class="clients-container-images py-6" style="max-width: 100%;margin-left: 0;">
             <div class="marquee-img" style="gap:64px;">
                 <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/alpl.svg" alt="">
                 <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/cxs.svg" alt="">
@@ -123,7 +123,11 @@
                 <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/vet.svg" alt="">
                 <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/taras.svg"
                     alt="">
-                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/agraga.svg"
+                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/Agragaagraga.svg"
+                    alt="">
+                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/Liveboxsvg.svg"
+                    alt="">
+                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/CookinCloud.svg"
                     alt="">
             </div>
 
