--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="#" class="pt-2 px-1 text-sm font-semibold leading-6 text-gray-900">Follow Us:</a>
                 <a href="https://www.linkedin.com/company/codeupglobalsolution/mycompany/?viewAsMember=true"
                     target="_blank"><img class="h-10 pt-0.5 w-auto mr-2" src="./assets/icons/in.svg" alt=""></a>
-                <button type="button"
+                <button type="button" onclick="openPopup()"
                     class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Contact
                     us</button>
             </div>
@@ -98,7 +98,7 @@
                                     target="_blank"><img class="h-10 pt-0.5 w-auto mr-2" src="./assets/icons/in.svg"
                                         alt=""></a>
                             </div>
-                            <button type="button"
+                            <button type="button" onclick="openPopup()"
                                 class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Contact
                                 us</button>
                         </div>
@@ -506,8 +506,12 @@
                         alt="">
                     <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/taras.svg"
                         alt="">
-                    <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/agraga.svg"
-                        alt="">
+                    <img class="w-auto h-12 hover:scale-125 transition duration-500"
+                        src="./assets/clients/Agragaagraga.svg" alt="">
+                    <img class="w-auto h-12 hover:scale-125 transition duration-500"
+                        src="./assets/clients/Liveboxsvg.svg" alt="">
+                    <img class="w-auto h-12 hover:scale-125 transition duration-500"
+                        src="./assets/clients/CookinCloud.svg" alt="">
                 </div>
 
             </marquee>
@@ -746,6 +750,101 @@
             </form>
         </div>
     </div>
+    <div class="relative z-10 popup-contact-form" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+        <!--
+          Background backdrop, show/hide based on modal state.
+      
+          Entering: "ease-out duration-300"
+            From: "opacity-0"
+            To: "opacity-100"
+          Leaving: "ease-in duration-200"
+            From: "opacity-100"
+            To: "opacity-0"
+        -->
+        <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"></div>
+
+        <div class="fixed inset-0 z-10 overflow-y-auto">
+            <div class="flex min-h-full items-end justify-center text-center sm:items-center sm:p-0">
+                <!--
+              Modal panel, show/hide based on modal state.
+      
+              Entering: "ease-out duration-300"
+                From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                To: "opacity-100 translate-y-0 sm:scale-100"
+              Leaving: "ease-in duration-200"
+                From: "opacity-100 translate-y-0 sm:scale-100"
+                To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+            -->
+                <div class="popup-card relative transform rounded-lg bg-white p-4 text-left shadow-xl transition-all ">
+                    <div class="contact-us-popup">
+                        <div class="contact-form">
+                            <div>
+                                <p class="black-font" style="font-size: 32px;margin-bottom: 4px;font-weight: 600;">
+                                    Contact Us</p>
+                                <p class="contact-small-text">
+                                    Our friendly team would love to hear from you!
+                                </p>
+                            </div>
+                            <div>
+                                <p class="contact-small-text">
+                                    Fullname
+                                </p>
+                                <input
+                                    class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+                                    id="inline-full-name" type="text">
+                            </div>
+                            <div>
+                                <p class="contact-small-text">
+                                    Phone number
+                                </p>
+                                <input
+                                    class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+                                    id="inline-full-name" type="text">
+
+                            </div>
+                            <div>
+                                <p class="contact-small-text">
+                                    Email ID
+                                </p>
+                                <input
+                                    class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+                                    id="inline-full-name" type="text">
+
+                            </div>
+                            <div>
+                                <button type="submit"
+                                    class="button-resp mt-0.5 w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                                    Submit
+                                </button>
+                            </div>
+                        </div>
+                        <div class="contact-person">
+                            <div class="icon-container">
+                                <p>
+                                </p>
+                                <img src="./assets/icons/close.svg" alt="" class="close-icon"  onclick="closePopup()" />
+                            </div>
+                            <div class="desc-contact">
+                                <div class="contact-profile-desc">
+                                    Outstanding tech services! Codeup Global Solutions delivered innovative
+                                    solutions that surpassed expectations. Highly recommended!
+                                </div>
+                                <div class="contact-profile-desc">
+                                  Matt Greaves
+                                </div>
+                                <div class="contact-profile-desc" style="font-weight: 600;font-size:12px;margin-top:-16px;">
+                                    <span>CEO, MOBILETECH PVT. LTD.</span></div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    </div>
+
     <footer class="footer">
         <div class="footer-container flex">
             <div class="footer-sub pt-8">
@@ -773,7 +872,7 @@
                         <p class="footer-subheading">Jobs</p>
                         <p class="footer-subheading">Usecases</p>
                         <p class="footer-subheading">Publishes</p>
-                        <p class="footer-subheading">Contact Us</p>
+                        <p class="footer-subheading" onclick="openPopup()">Contact Us</p>
                     </div>
                 </details>
                 <details class="lg:hidden mb-4 question py-4 border-b border-grey-lighter mb-8">
@@ -846,7 +945,7 @@
                 <p class="footer-subheading">Jobs</p>
                 <p class="footer-subheading">Usecases</p>
                 <p class="footer-subheading">Publishes</p>
-                <p class="footer-subheading">Contact Us</p>
+                <p class="footer-subheading" onclick="openPopup()">Contact Us</p>
             </div>
             <div class="footer-sub img-resp-hide ">
                 <p class="footer-header">Services</p>
